# stm32f4xx-freertos-template

./: .gitignore  CMakeLists.txt  README.md
cmake/: FreeRTOS.cmake  stm32.cmake  toolchain-arm-none-eabi-gcc.cmake
inc/: FreeRTOSConfig.h  stm32f4xx_hal_conf.h
linker/: stm32f4.ld
src/: freeRTOS.c  main.cpp
stm32/: system_stm32f4xx.c
